app/imports/ui/story.css
#logo {
  height: 50px;
}

#page-story {
  height: 100%;
}

#menubar {
  height: 60px;
  padding: 10px;
  display: inline-block;
}

#wrapper {
  height: calc(100% - 0px);
  padding-left: 0;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

#sidebar-wrapper {
  height: 100%;
  z-index: 1000;
  position: fixed;
  left: 250px;
  width: 0;
  margin-left: -250px;
  overflow-y: auto;
  /* background: #000; */
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

#page-content-wrapper {
  height: 100%;
  width: 100%;
  position: absolute;
  padding-bottom: 5px;
}

#wrapper.toggled {
  padding-left: 150px;
}

#wrapper.toggled #sidebar-wrapper {
  width: 250px;
}

#wrapper.toggled #page-content-wrapper {
  position: absolute;
  margin-right: -250px;
}

/* Sidebar Styles */
.sidebar-nav {
  position: absolute;
  /* top: 0; */
  width: 250px;
  margin: 0;
  padding: 0;
  list-style: none;
}

.sidebar-nav li {
  text-indent: 5px;
  line-height: 40px;
  border-bottom: 1px solid gray;
  display: inline-block;
  width: 100%;
  white-space: nowrap;
}

.sidebar-nav li:hover {
  background-color: rgba(200, 200, 200, 0.2);
}

.sidebar-nav li a {
  text-decoration: none;
  color: #333;
  margin: 0px;
  display: block;
  width: 100%;
  height: 100%;
}


.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: underline;
  background-color: rgba(200, 200, 200, 0.2);
}

.sidebar-nav>.sidebar-brand {
  height: 65px;
  font-size: 20px;
  font-weight: bold;
  line-height: 60px;
  margin-left: 5px;
  background-color: rgba(128,128,128,0.1);
}

.sidebar-nav>.sidebar-brand a {
  color: #999999;
}

.sidebar-nav>.sidebar-brand a:hover {
  color: #fff;
  background: none;
}

@media(min-width:768px) {
  #wrapper {
    padding-left: 250px;
  }

  #wrapper.toggled {
    padding-left: 0;
  }

  #sidebar-wrapper {
    width: 250px;
  }

  #wrapper.toggled #sidebar-wrapper {
    width: 0;
  }

  #page-content-wrapper {
    /* padding: 0 5px 5px 5px; */
    position: relative;
  }

  #wrapper.toggled #page-content-wrapper {
    position: relative;
    margin-right: 0;
  }
}

